--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,18 @@ body {
 a {
   color: #00B7FF;
 }
+
+body > nav {
+  grid-area: nav;
+  background-color: #B8C0C2;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 20px 0 30px;
+}
+
+.add-recipe {
+  object-fit: contain;
+  margin-right: auto;
+  background-color: red;
+}
