--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,12 @@
 <%- include('./partials/header') %>
 
-<h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+
+<div class="container">
+  <h1 class="title-card"><%= title %></h1>
+  <div class="recipe-card">test</div>
+  <div class="recipe-card">test</div>
+  <div class="recipe-card">test</div>
+  <div class="recipe-card">test</div>
+</div>
   
 <%- include('./partials/footer') %>
