--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,11 +9,11 @@
 </head>
 <body>
   <nav>
-    <button class="add-recipe">Add Recipe</button>
-    <button>All Recipes</button>
-    <button>My Recipes</button>
-    <button>Saved Recipes</button>
-    <button>Log In</button>
+    <a href="/new" class="add-recipe button">Add Recipe</a>
+    <a href="/" class="button">All Recipes</a>
+    <a href="/" class="button">My Recipes</a>
+    <a href="/" class="button">Saved Recipes</a>
+    <a href="/" class="button">Log In</a>
   </nav>
   
   <main>
