--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -1,5 +1,4 @@
-<%- include('./partials/header') %>
-
+<%- include('../partials/header') %>
 
 <div class="container">
   <h1 class="title-card"><%= title %></h1>
@@ -9,4 +8,4 @@
   <div class="recipe-card">test</div>
 </div>
   
-<%- include('./partials/footer') %>
+<%- include('../partials/footer') %>
