--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -1,11 +1,8 @@
 <%- include('../partials/header') %>
 
-<div class="container">
+<div class="flex-container">
   <h1 class="title-card"><%= title %></h1>
-  <div class="recipe-card">test</div>
-  <div class="recipe-card">test</div>
-  <div class="recipe-card">test</div>
-  <div class="recipe-card">test</div>
+  <div class="add-recipe-card"></div>
 </div>
   
 <%- include('../partials/footer') %>
