--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<div class="container">
+<div class="add-recipe-container">
   <h1 class="title-card"><%= title %></h1>
   <div class="recipe-card">test</div>
   <div class="recipe-card">test</div>
