--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -2,7 +2,9 @@
 
 <div class="flex-container">
   <h1 class="title-card"><%= title %></h1>
-  <div class="add-recipe-card"></div>
+  <div class="add-recipe-card">
+    
+  </div>
 </div>
   
 <%- include('../partials/footer') %>
