--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -2,9 +2,10 @@
 
 <div class="flex-container">
   <h1 class="title-card"><%= title %></h1>
-  <div class="add-recipe-card">
-    
-  </div>
+  <div class="recipe-card">test</div>
+  <div class="recipe-card">test</div>
+  <div class="recipe-card">test</div>
+  <div class="recipe-card">test</div>
 </div>
   
 <%- include('../partials/footer') %>
