Adds ability to actually add a recipe

--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -34,7 +34,7 @@
       
       <div>
         <label>Ingredients</label>
-        <input type="text" name="ingriedients" placeholder="Ingredients">
+        <input type="text" name="ingredients" placeholder="Ingredients">
       </div>
       
       <div>
