--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -2,10 +2,9 @@
 
 <div class="flex-container">
   <h1 class="title-card"><%= title %></h1>
-  <div class="recipe-card">test</div>
-  <div class="recipe-card">test</div>
-  <div class="recipe-card">test</div>
-  <div class="recipe-card">test</div>
+  <% recipes.forEach(function(r) { %>
+    <div class="recipe-card"><%= r.title %></div>
+  <% }) %>
 </div>
   
 <%- include('../partials/footer') %>
