--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -9,7 +9,7 @@
   <div>Steps: <%= recipe.steps %></div>
   <% if(user && user._id.equals(recipe.user)) { %>
     <div>
-        <form action="/recipes/<%= recipe._id %>?_method=DELETE">
+        <form action="/recipes/<%= recipe._id %>?_method=DELETE" method="POST">
             <button type="submit">Delete Recipe</button>
         </form>
     </div>
