--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -5,8 +5,32 @@
   <div>Main Category: <%= recipe.mainCategory %></div>
   <div>Prep Time: <%= recipe.prepTime %> minute<%- recipe.prepTime !== 1 ? 's' : '' %></div>
   <div>Cook Time: <%= recipe.cookTime %> minute<%- recipe.cookTime !== 1 ? 's' : '' %></div>
-  <div>Ingredients: <%= recipe.ingredients.join(', ') %></div>
-  <div>Steps: <%= recipe.steps.join(', ') %></div>
+  <% if(recipe.ingredients) { %>
+    <div>
+      Ingredients:
+      <ul>
+        <% recipe.ingredients = recipe.ingredients[0].split(/\s*, \s*/) %>
+        <% recipe.ingredients.forEach(function(i) { %>
+          <li>
+            <%= i %>
+          </li>
+        <% }) %>
+      </ul>
+    </div>
+  <% } %>
+  <% if(recipe.steps) { %>
+    <div>
+      Steps:
+      <ol>
+        <% recipe.steps = recipe.steps[0].split(', ') %>
+        <% recipe.steps.forEach(function(s) { %>
+          <li>
+            <%= s %>
+          </li>
+        <% }) %>
+      </ol>
+    </div>
+  <% } %>
   <% if(user && user._id.equals(recipe.user)) { %>
     <div>
       <form action="/recipes/<%= recipe._id %>/edit" method="GET">
