--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -2,47 +2,49 @@
 
 <div class="flex-container">
   <h1 class="title-card"><%= recipe.title %></h1>
-  <div>Main Category: <%= recipe.mainCategory %></div>
-  <div>Prep Time: <%= recipe.prepTime %> minute<%- recipe.prepTime !== 1 ? 's' : '' %></div>
-  <div>Cook Time: <%= recipe.cookTime %> minute<%- recipe.cookTime !== 1 ? 's' : '' %></div>
-  <% if(recipe.ingredients) { %>
-    <div>
-      Ingredients:
-      <ul>
-        <% recipe.ingredients = recipe.ingredients[0].split(/\s*, \s*/) %>
-        <% recipe.ingredients.forEach(function(i) { %>
-          <li>
-            <%= i %>
-          </li>
-        <% }) %>
-      </ul>
-    </div>
-  <% } %>
-  <% if(recipe.steps) { %>
-    <div>
-      Steps:
-      <ol>
-        <% recipe.steps = recipe.steps[0].split(', ') %>
-        <% recipe.steps.forEach(function(s) { %>
-          <li>
-            <%= s %>
-          </li>
-        <% }) %>
-      </ol>
-    </div>
-  <% } %>
-  <% if(user && user._id.equals(recipe.user)) { %>
-    <div>
-      <form action="/recipes/<%= recipe._id %>/edit" method="GET">
-          <button class="btn">Edit Recipe</button>
-      </form>
-    </div>
-    <div>
-      <form action="/recipes/<%= recipe._id %>?_method=DELETE" method="POST">
-          <button type="submit" class="btn">Delete Recipe</button>
-      </form>
-    </div>
-  <% } %>
+  <div class="flex-container show-recipe">
+    <div>Main Category: <%= recipe.mainCategory %></div>
+    <div>Prep Time: <%= recipe.prepTime %> minute<%- recipe.prepTime !== 1 ? 's' : '' %></div>
+    <div>Cook Time: <%= recipe.cookTime %> minute<%- recipe.cookTime !== 1 ? 's' : '' %></div>
+    <% if(recipe.ingredients) { %>
+      <div>
+        Ingredients:
+        <ul>
+          <% recipe.ingredients = recipe.ingredients[0].split(/\s*, \s*/) %>
+          <% recipe.ingredients.forEach(function(i) { %>
+            <li>
+              <%= i %>
+            </li>
+          <% }) %>
+        </ul>
+      </div>
+    <% } %>
+    <% if(recipe.steps) { %>
+      <div>
+        Steps:
+        <ol>
+          <% recipe.steps = recipe.steps[0].split(', ') %>
+          <% recipe.steps.forEach(function(s) { %>
+            <li>
+              <%= s %>
+            </li>
+          <% }) %>
+        </ol>
+      </div>
+    <% } %>
+    <% if(user && user._id.equals(recipe.user)) { %>
+      <div>
+        <form action="/recipes/<%= recipe._id %>/edit" method="GET">
+            <button class="btn">Edit Recipe</button>
+        </form>
+      </div>
+      <div>
+        <form action="/recipes/<%= recipe._id %>?_method=DELETE" method="POST">
+            <button type="submit" class="btn">Delete Recipe</button>
+        </form>
+      </div>
+    <% } %>
+  </div>
   <!-- <div>
     <h1 class="tweak-card">Tweaks</h1>
   </div>
