--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,6 +127,7 @@ body > nav {
   color: white;
   background-color: var(--recipe-bg);
   padding: 75px;
-  margin: 50px 100px;
+  margin: 15px 100px 50px 100px;
   font-size: 20px;
+  border-radius: 25px;
 }
